compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_type_does_not_allow_unit_codepoint_utf8_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 232
expression: "let x = <<1:utf8_codepoint-size(5)>> x"

---
error: Invalid bit string segment
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = <<1:utf8_codepoint-size(5)>> x
  │             ^^^^^^^^^^^^^^ Size cannot be specified here

Hint: utf8_codepoint segments have an autoatic size.
See: https://gleam.run/book/tour/bit-strings.html

